--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: ruby
 rvm:
-  - 2.2.4
-before_install: gem install bundler -v 1.11.2
-
+  - 2.2
+  - 2.3
+sudo: required
+dist: trusty
+before_install: 
+  - gem install bundler
+  - gem update --system
+  - gem --version
 gemfile:
   - gemfiles/3.2.gemfile
-
 addons:
     code_climate:
         repo_token: 381dda707b91ae7760d2f5b85ebf0ba677635dc35f88be5323893dde7c1bade6
 after_success:
   - bundle exec codeclimate-test-reporter
-
