Avoid rubygems 3.x that doesn't support ruby < 2.3
see https://github.com/rubygems/rubygems/issues/2534

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ rvm:
   - 2.3
 sudo: required
 dist: trusty
-before_install: 
+before_install:
+  - gem i rubygems-update -v '<3' && update_rubygems
   - gem install bundler
-  - gem update --system
   - gem --version
 gemfile:
   - gemfiles/3.2.gemfile
