Fix: Error installing bundler: bundler requires Ruby version >= 2.3.0
See bundler/bundler#6865

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: required
 dist: trusty
 before_install:
   - gem i rubygems-update -v '<3' && update_rubygems
-  - gem install bundler
+  - gem install bundler -v 1.17.3
   - gem --version
 gemfile:
   - gemfiles/3.2.gemfile
