--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
+sudo: false
+env:
+  global:
+    - CC_TEST_REPORTER_ID=381dda707b91ae7760d2f5b85ebf0ba677635dc35f88be5323893dde7c1bade6
 language: ruby
 rvm:
   - 2.2
   - 2.3
-sudo: required
-dist: trusty
+gemfile:
+  - gemfiles/3.2.gemfile
 before_install:
   - gem i rubygems-update -v '<3' && update_rubygems
   - gem install bundler -v 1.17.3
   - gem --version
-gemfile:
-  - gemfiles/3.2.gemfile
-addons:
-    code_climate:
-        repo_token: 381dda707b91ae7760d2f5b85ebf0ba677635dc35f88be5323893dde7c1bade6
-after_success:
-  - bundle exec codeclimate-test-reporter
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - bundle exec rake test
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
