Fix: wrong gemfile path

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,7 +25,7 @@ jobs:
           - 2.6
           - 2.7
         gemfile:
-          - Gemfile
+          - 3.2.gemfile
     env:
       BUNDLE_GEMFILE: "gemfiles/${{ matrix.gemfile }}"
 
